command _suspend-frame_ after Emacspeak has been loaded.


** Speech-Enable Package Syslog

Speech-enable ~syslog~ for working with log files.
This replaces the now very old ~analog~ in my regular work-flow.

** Speech-enable Package ~hide-lines~

A light-weight package for hide/show matching lines.

** Speech-Enable Racer

Module ~emacspeak-racer~ speech-enables ~racer~ for Rust documentation
and completion.
** Speech-Enable Eglot


Module ~emacspeak-eglot~ speech-enables ~eglot~ for lsp  support.
** speech-Enable project.el

Module ~emacspeak-project~ speech-enables package ~project~.


** Speech-Enable rust-mode

Module ~emacspeak-rust-mode~ speech-enables ~rust-mode~.


** Speech-Enable YTEl

Module ~emacspeak-ytel~ speech-enables package ~ytel~, an Elisp API
bridge to YT.

** Emacspeak-sdcv --- speech-Enable Stardict Interaction


Module ~emacspeak-sdcv~ speech-enables emacs package ~sdcv~ to enable
interaction with Stardict dictionaries.


** Module ~emacspeak-tdtd~ Is Obsolete 

Package ~tdtd~ which supported editing of SGML DTDs has disappeared
from its source location, making module ~emacspeak-tdtd~ obsolete.

** Module  ~emacspeak-kite~ Is Obsolete.

Package ~kite~ is obsolete --- use Indium for live debugging of Web

** Module  ~emacspeak-jss~ Is Obsolete.

Package ~jss~ is obsolete --- use Indium for live debugging of Web
And NodeJS Apps
** Stripped Down ~emacspeak-bbc~

The BBC Backstage API is obsolete and long gone; this is reflected in
a lighter-weight, stripped down ~emacspeak-bbc~.
** G-Client Modules Merged Into Emacs/lisp

Modules from sub-package ~g-client~ that are still in use have been
merged into the _emacspeak/lisp_ directory.

** Module ~emacspeak-xml-shell~ Is Obsolete

Long live XML!


** Module ~emacspeak-npr~ Is Marked Obsolete 


The API used by module ~emacspeak-npr~ has been retired by  [[npr.org]] in
favor of their newer NPR-One API. Module ~emacspeak-npr~ is therefore
obsolete and no longer supported.