@@ -2803,75 +2803,6 @@ Optional interactive prefix arg `category' prompts for a category."
   (let ((name "RadioTime Search"))
     (emacspeak-url-template-open (emacspeak-url-template-get name))))
 ;;}}}
-;;{{{ IHeart Radio:
-
-(defvar emacspeak-wizards-iheart-map
-  (let ((map (make-sparse-keymap)))
-    (define-key map (kbd "RET") 'ems--iheart-at-point)
-    map)
-  "Keymap used in IHeart Radio Results buffer.")
-(declare-function emacspeak-vlc-player "emacspeak-vlc" (resource))
-
-(defun emacspeak-wizards-iheart-radio-play (id)
-  "Play specified   station from IHeart Radio."
-  (interactive "sId: ")
-  (cl-assert (numberp (read id)) t "Id %s is not a number" id)
-  (let ((ih-url "https://github.com/oldlaptop/iheart-mplayer.git "))
-    (unless (executable-find "iheart-url")
-      (error "First install iheart-url from %s" ih-url))
-    (emacspeak-vlc-player
-     (string-trim
-      (shell-command-to-string
-       (format "iheart-url %s" id))))))
-
-(defun ems--iheart-at-point ()
-  "Play station at point if any."
-  (interactive)
-  (let ((id (get-text-property (point) 'ihr-id)))
-    (cl-assert id nil "No station id here.")
-    (when (called-interactively-p 'interactive)
-      (emacspeak-auditory-icon 'button))
-    (emacspeak-wizards-iheart-radio-play id)))
-
-;;;###autoload
-(defun emacspeak-wizards-iheart (q)
-  "Perform IHeart Radio search and display clickable results."
-  (interactive "sIHeart Radio Query: ")
-  (cl-declare (special emacspeak-wizards-iheart-map))
-  (let ((ih-url "https://github.com/oldlaptop/iheart-mplayer.git ")
-        (inhibit-read-only t)
-        (results nil)
-        (hits nil)
-        (ihr (format "*IHeart Radio: Results For %s"
-                     (url-hexify-string q))))
-    (unless (executable-find "iheart-url")
-      (error "First install iheart-url from %s" ih-url))
-    (setq results
-          (split-string
-           (shell-command-to-string (format "iheart-url -s '%s'"
-                                            (url-hexify-string q)))
-           "\n"))
-    (setq hits (split-string (pop results) ":"))
-    (when (zerop (read (cl-second hits))) (error "No matches found."))
-    (with-current-buffer (get-buffer-create ihr)
-      (erase-buffer)
-      (insert (propertize "Press <enter> to play selected station.\n\n"
-                          'face 'bold))
-      (cl-loop
-       for r in results do
-       (insert r)
-       (add-text-properties
-        (line-beginning-position) (line-end-position)
-        (list
-         'keymap emacspeak-wizards-iheart-map
-         'ihr-id (cl-second (split-string r "id:"))))
-       (insert "\n"))
-      (special-mode)
-      (goto-char (point-min))
-      (forward-line 2))
-    (funcall-interactively #'pop-to-buffer ihr)))
-
-;;}}}
 ;;{{{ Generic YQL Implementation:
 
 (defvar yql-public-base
